# task-worker-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: codegen.yml  release.yml  test.yml
artifacts/task-worker-types/: README.md  index.ts  package.json
docs/: adding-a-worker.md
docs/fleet/: README.md  conventions.md  workers.json
docs/fleet/runbooks/: debugging-with-payload-logs.md  local-testing.md  sdk-upgrade.md
docs/superpowers/plans/: 2026-04-26-payload-logging.md  2026-04-28-deploy-case-worker.md
docs/superpowers/specs/: 2026-04-26-payload-logging-design.md  2026-04-28-deploy-case-worker-design.md
src/task_worker_api/: __init__.py  cancel.py  client.py  context.py  conventions.py  enums.py  errors.py  files.py  payload_log.py  progress.py  testing.py  worker.py
src/task_worker_api/schemas/: __init__.py  _base.py  cinematic_baking.py  deploy_case.py  detect_cut_planes.py  gs_build.py  model_initializing.py  segmentation.py
tests/: test_conventions.py  test_payload_log.py  test_payload_log_integration.py  test_schemas.py  test_worker_loop.py
tools/: gen_typescript.py
