[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-worker-api"
version = "0.5.0"
description = "Shared contract and worker SDK for the SynPusher task queue."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Syngular Technology" }]
dependencies = [
    "pydantic>=2.0",
    # httpx is intentionally loosely pinned. The SynPusher backend still
    # pins httpx==0.23.3; workers can go higher. BackendClient uses only
    # the stable AsyncClient surface that hasn't changed across 0.23-0.28.
    "httpx>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_worker_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
